--- a/3_related_work/related-work.tex
+++ b/3_related_work/related-work.tex
@@ -4,43 +4,43 @@ Neste capítulo, serão descritos oito trabalhos relacionados que direta ou indire
 
 Cada trabalho relacionado será descrito de acordo com suas características mais relevantes. Ao final de cada subseção serão destacados os melhores aspectos e os pontos fracos de cada um. Por fim, será feito um paralelo das características que são importantes para os objetivos propostos neste trabalho, que servirá como base de comparação.
 
-\section{\textit{Visualization of Test Information to Assist Fault Localization}}\label{sec:related-work-1}
+\section{\textit{Formal Non-Fragile Stability Verification of Digital Control Systems with Uncertainty}}\label{sec:related-work-1}
 
-Jones {\it et al.}~\cite{Jones:2002} apresentam uma abordagem para auxiliar na localização de falhas usando visualização de informação de testes. A ideia é executar uma suíte de testes e colorir declarações do programa relacionadas tanto a casos de teste bem-sucedidos quanto aos que falharam, de forma a apresentar dados visuais para que desenvolvedores sejam capazes de inspecionar execuções do programa, argumentar declarações associadas a comportamentos defeituosos e possivelmente identificar falhas. Os autores também descrevem a ferramenta desenvolvida, denominada \textsc{Tarantula}, que faz uso da técnica de visualização.
+Bessa {\it et al.}~\cite{bessa2017formal} apresentam uma metodologia de verificação para determinar formalmente a estabilidade incerta de sistemas lineares em controladores digitais com considerações sobre os aspectos de implementação. Especificamente, esta estratégia é combinada com o DSVerifier, que é uma ferramenta de verificação que utiliza a verificação de modelo limitado com base nas teorias de módulo de confiabilidade (SMT) para verificar a estabilidade dos sistemas de controle digital considerando incerteza. O DSVerifier determina a estabilidade do sistema de controle, considerando a planta, juntamente com os efeitos do comprimento da palavra finita (FWL) na implementação do controlador digital. Em seguinda, verifica-se a estabilidade robusta ``não frágil'' de um determinado sistema em malha fechada. A metodologia proposta e a respectiva ferramenta (DSVerifier) são avaliadas considerando exemplos de controle não frágeis encontrados na literatura.
 
-O trabalho mostra que a técnica é útil para auxiliar na depuração de programas, dando uma visão global ao invés de uma apenas local, como o depurador padrão oferece, e o espaço de busca por falhas dentro do programa é reduzido. No entanto, essa abordagem não é completamente automatizada, visto que ainda é necessário a execução iterativa do programa e seus respectivos casos de teste pelo usuário; linhas defeituosas podem ser marcadas como seguras dependendo do caso de teste; e a ferramenta não é tão eficaz quando um programa apresenta múltiplas falhas.
+O trabalho mostra que a técnica é capaz de prever problemas de fragilidade em controladores robustos quando consideramos a estabilidades de sistemas de controle digital, visto que leva em consideração os efeito FWL. No entanto, este trabalho se prende a apenas verificar a estabilidade, sendo que aspectos de desempenho são deixados de lado, visto que as propriedades de desempenho são super importantes quando se projeta controladores, além de já considerarem a estabilidade.
 
-\section{\textit{Locating Causes of Program Failures}}\label{sec:related-work-2}
+\section{\textit{Formal Analysis of Robustness at Model and Code Level }}\label{sec:related-work-2}
 
-Cleve {\it et al.}~\cite{Cleve:2005} discutem uma abordagem para localizar falhas em programas através de buscas em espaço ({\it i.e.}, estados do programa) e em tempo {\it i.e.}, transições de causa, que são instantes de tempo onde uma variável deixa de ser a causa de uma falha e uma outra varíavel passa a ser a causa. A comparação dos estados do programa de execuções bem-sucedidas e defeituosas é fundamental para que se possam encontrar os pontos em que transições de causa ocorrem, visto que esses pontos não são apenas bons locais para reparos, mas também apontam os defeitos que causam a falha.
+Wang {\it et al.}~\cite{WangGRJF16} apresentam uma abordagem de verificação da robustez de sistemas de controle, a nivel de código e modelagem, onde se baseia em um cálculo invariante na dinâmica discreta do sistema. Usando solucionadores de programação semi-definida (SDP), uma função baseada em Lyapunov é sintetizada, capturando as margens do vetor do sistema linear em malha fechada considerado. Essa invariante numérica expressa sobre as variáveis de estado do sistema é compatível com a análise de código e permite sua validação no artefato de código. Esta análise automática amplia as técnicas de verificação focadas na implementação do controlador, abordando a validação da robustez no modelo e no nível de código. Ele foi implementado em uma ferramenta que analisa sistemas SISO discretos e gera super-aproximações de margens de fase e ganho.
 
-Os autores apresentam uma abordagem eficaz para localizar causas de falhas, de forma que é possível apontar trechos de código que resultam em problemas. Essa técnica foi aplicada dentro de uma ferramenta de depuração de código de código aberto, \textsc{AskIgor}~\cite{Zeller:2006} e, segundo os resultados apresentados no trabalho, se mostrou mais eficaz que outras técnicas estudadas à epoca. Apesar desses bons aspectos, ainda é necessária uma suíte de teste com alta cobertura de código, já que a técnica depende dessas entradas para encontrar falhas, e também é necessário escolher precisamente o espaço de busca no espaço e tempo para que a falha seja de fato encontrada.
+Os autores apresentam uma abordagem eficaz para verificar robustez dos controladores digitais a nivel de código e modelagem. Novamente, esse trabalho emprega a verificação usando uma abordagem a nivel de código, porém não considera aspectos de desempenho do controlador, apesar de considerar aspectos relativos a efeitos causados pela aritmética de ponto fixo.
 
-\section{\textit{Fast Model-based Fault Localisation with Test Suites}}\label{sec:related-work-3}
+\section{\textit{Temporal Logic Control of Discrete-Time Piecewise Affine Systems}}\label{sec:related-work-3}
 
-Birch {\it et al.}~\cite{Birch:2015} mostram um algoritmo para localização de falhas rápida baseada em modelos. Ele executa uma suíte de testes e, com o uso de métodos de execução simbólica, automaticamente identifica um pequeno subconjunto de locais do programa onde reparos são necessários, baseados nos casos de teste malsucedidos. O algoritmo usa limites de tempo para aperfeiçoar a sua velocidade, de forma que se um caso de teste levar mais que o esperado para ser verificado, a execução atual é adiada e uma outra toma o seu lugar. Esse processo melhora o desempenho geral da técnica, pois uma lista de possíveis locais onde reparos são necessários é mantida e o adiamento da análise para um determinado caso de teste pode posteriormente ser produtiva, uma vez que mais informações sobre o programa pode ser obtidas por meio da análise de outros casos de teste.
+Yordanov {\it et al.}~\cite{yordanov2012temporal} apresentam uma estrutura computacional para síntese automática de uma estratégia de controle de realimentação para um sistema de tempo discreto (mais precisamente sistemas PWA) a partir de uma especificação dada como uma lógica linear temporal (LTL) sobre um conjunto arbitrário de predicados lineares nas variáveis de estado do sistema. A abordagem consiste em definir partições apropriadas para seu estado e espaços de entrada, e então constrói-se uma abstração finita do sistema na forma de um sistema de transição de controle. Depois disso, aproveitando ideias e técnicas de verificação de modelos LTL e jogos de Rabin, desenvelvoram um algoritmo para gerar uma estratégia de controle para a abstração finita.
 
-O algoritmo apresentado nesse trabalho se mostrou eficiente e otimizado para lidar com suítes de teste unitário extensas, já que ele consegue adiar a procura por falhas baseada em um determinado caso de teste, caso ela demore mais que o esperado. Para a execução simbólica do modelo do programa original, os autores utilizaram as ferramentas \textsc{Klee}~\cite{Cadar:2008} e ESBMC~\cite{Cordeiro:2012}. Apesar de esta abordagem estreitar o espaço de busca por falhas, ela ainda depende inteiramente de uma suíte de testes bem elaborada, visto que caso tal suíte não consiga cobrir a parte do código com problemas, essas falhas não serão encontradas pela técnica.
+A abordagem apresentada para a construção da abstração garante que uma estratégia de controle gerada para o sistema de controle finito pode ser facilmente transformada em uma estratégia de controle para o sistema PWA inicial. Embora comprovadamente correta, a solução geral é conservadora e computacionalmente cara. Apesar de esta abordagem conseguir sintetizar controladores, deixa de considerar alguns aspectos bem relevantes em projetos de controladores digitais, como aspectos de desempenho e efeitos da fragilidade de controladores quando implementados em microprocessadores.
 
-\section{\textit{Verifying Concurrent Programs by Memory Unwinding}}\label{sec:related-work-4}
+\section{\textit{Formal Methods for Adaptive Control of Dynamical Systems}}\label{sec:related-work-4}
 
-Tomasco {\it et al.}~\cite{Tomasco:2015} relatam uma abordagem que usa uma técnica chamada {\it desenrolamento de memória} (MU), a qual significa que operações são escritas em uma memória compartilhada, para simbolicamente verificar programas concorrentes que fazem uso de memória compartilhada e criação dinâmica de {\it threads}. Primeiramente uma possível MU é definida arbitariamente e então todas as execuções do programa que são compatíveis com essa definição são simuladas. Para cada simulação, a ideia é sequencializar programas concorrentes, em relação às regras de MU, e então usar a verificação de modelos no novo código, limitada ao número total de operações de escrita na memória compartilhada, usando uma ferramenta de verificação sequencial já existente. Caso um erro não seja encontrado para essa MU definida, uma nova é gerada e o processo de simulação é feito novamente, até que um erro seja encontrado ou todas as possibilidades tenham sido exploradas.
+Sadraddini and Belta~\cite{sadraddini2017formal} desenvolveram um método para controlar sistemas de tempo discreto com parâmetros constantes mas inicialmente desconhecidos a partir de especificações de lógica temporal linear (LTL).Os autores usam as noções de sistemas de transição paramétricos e adaptativos (não-determinísticos) e ferramentas de métodos formais para computar estratégias de controle adaptativo para sistemas finitos. 
 
-A abordagem descrita pelos autores é eficaz para verificar o modelo de programas concorrentes, usando um algoritmo de sequencialização que opera de forma gulosa~\cite{Cormen:2009}, a qual emprega a noção de desenrolamento de memória. A modelagem das primitivas da biblioteca {\it Pthread}~\cite{Butenhof:1997} é feita por completo, porém a alocação dinâmica de memória ainda é limitada. Apesar dos resultados do trabalho mostrarem que o algoritmo implementado na ferramenta MU-CSeq foi capaz de encontrar todos os defeitos da suíte de concorrência da {\it International Competition on Software Verification} $2015$, ele consegue apenas assegurar se um erro existe ou não, sem localizar as linhas que precisam ser consertadas.
+Apesar de não utilizar os métodos tradicionais de controle adaptativo, usando uma abordagem correta por construção a qual não requer um modelo de referência e pode lidar com uma gama muito maior de sistemas e especificações, não leva em consideração aspectos relativos a depensempenho de sistemas considerando a resposta ao degrau, bem como deixa de lado aspectos enfrentados com a implementação, como os efeitos de fwl. Como a maioria das outras aplicações de métodos formais, os resultados sofrem pela alta complexidade computacional. Como discutido no artigo, o número de estados no sistema de transição adaptativa (ATS) pode ser muito grande. Além disso, a construção de quocientes finitos para sistemas infinitos é computacionalmente difícil.
 
-\section{\textit{Verifying Multi-Threaded Software using SMT-based Context-Bounded Model Checking}}\label{sec:related-work-5}
+\section{\textit{Correct-by-construction Adaptive Cruise Control: Two Approaches}}\label{sec:related-work-5}
 
-Cordeiro {\it et al.}~\cite{Cordeiro:2011} descrevem três abordagens ({\it preguiçosa}, {\it gravação de escalonamento} e {\it sob aproximação e ampliação}) para verificar programas concorrentes usando o verificador de modelos ESBMC~\cite{Cordeiro:2012}, baseado em teoria de módulo da satisfiabilidade (SMT). A primeira abordagem gera todas as possíveis intercalações e chama o solucionador SMT em cada uma delas individualmente. A segunda codifica todas as possíveis intercalações em uma única fórmula e explora a rapidez do solucionador. A terceira reduz o espaço de estados abstraindo o número de intercalações das provas de insatisfiabilidade geradas pelo solucionador SMT. Modelando as primitivas de sincronização da biblioteca {\it Pthread}~\cite{Butenhof:1997}, o ESBMC cria um programa instrumentado, em relação ao original, e usa verificação de modelos limitada ao número de trocas de contexto nessa nova versão, com o objetivo de encontrar um erro ou explorar todas as intercalações possíveis.
+Nilsosn {\it et al.}~\cite{nilsson2016correct} descrevem duas abordagens para sintetizar controladores correto por construção em istemas de controle de cruzeiro adaptativo. Ambas as abordagens baseiam-se na computação em pontos fixos no domínio do controlador, a partir da qual a especi?cação em lógica linear temporal (LTL) pode ser aplicada. Uma calcula tais pontos fixos diretamente no espaço de estados contínuo, a outra em uma abstração de estados finitos da dinâmica não-linear.
 
-De acordo com os resultados experimentais, este trabalho se mostra eficaz para tratar programas concorrentes, encontrando não somente erros de atomicidade e violação de ordem, como também bloqueios fatais locais e globais. Dentre as três abordagens propostas, a preguiçosa se mostrou mais eficiente que as outras, sendo capaz de verificar todos os programas propostos. Apesar destes pontos, o verificador de modelos pode apenas dizer se um erro existe ou não, e caso exista, ele não pode apontar diretamente onde tal erro se encontra.
+De acordo com os resultados experimentais, este trabalho se mostra eficaz para sistemas de controle de cruzeiro adaptativo. Porém, leva em consideração a síntese de controladores estáveis considerando a propriedade de \textit{safety}, mas n'ao aborda questões de projeto de controladores referentes a desempenho a resposta ao degrau.
 
-\section{\textit{Automated Fault Localization for C Programs}}\label{sec:related-work-6}
+\section{\textit{Formal Specification and Analysis Approaches for Spacecraft Attitude Control Requirements}}\label{sec:related-work-6}
 
-Griesmayer {\it et al.}~\cite{Griesmayer:2007} propuseram um método para localizar falhas em programas sequenciais em ANSI-C utilizando técnicas de BMC. Dados um programa, uma especificação e um contraexemplo para mostrar que a especificação não é satisfeita, ou seja, uma falha existe, os autores usam esse contraexemplo para criar uma versão estendida desse programa. As entradas do programa são fixadas de acordo com os valores do contraexemplo e introduzem predicados anormais para cada componente do programa, gerando uma versão instrumentada do código original. As variáveis do programa são modeladas não-deterministicamente, de forma a encontrar os valores que satisfaçam a especificação original do programa. O contraexemplo do programa instrumentado contém as linhas que levam à falha e quais valores são necessários para produzir uma execução bem-sucedida do programa.
+Gross {\it et al.}~\cite{gross2017formal} propuseram uma abordagem para formalizar requisitos comuns de sistema de controle de atitude de naves espaciais, como limites do atuador, erro de indicação, alcançabilidade, desvio, tempo de assentamento, tempo de subida e sobressinal. Os autores utlizaram métodos formais, mais especificamente verificação de modelos e teste de hipótese para verificar requisitos de desempenho de sistemas de controle de atitude de naves espaciais. O trabalho em questão avalia esses sistemas e verifica se obedecem a esses requisitos no domínio do tempo contínuo. Embora a intenção inicial de formalizar os requisitos fosse conduzir análises formais de métodos para determinar se o projeto de controle de atitude de naves espaciais atendia aos requisitos do sistema, as equações de movimentos não-lineares se mostraram muito complexas para os solucionadores e apenas alguns requisitos puderam ser analisados.
 
-Um ponto positivo do método é o fato dos contraexemplos gerados pelo verificador de modelos indicarem não somente as linhas defeituosas do programa, mas também os valores necessários a serem atribuidos para as entradas do programa para corrigir tal falha. \textcolor{red}{reescrever:}Apesar disso, o método funciona apenas para programas ANSI-C padrão, {\it i.e.}, programas procedurais/sequenciais e o tempo de conversão, desenrolamento e geração da representação interna do programa faz com que o tempo para localização das falhas seja alto.
+Um ponto positivo desse trabalho foi que consideraram aspectos de desempenho na verificação de controladores. Apesar disso, os autores não trabalharam com sistemas em tempo discreto, não levando em consideração aspectos de implementação, como os efeitos fwl.
 
-\section{\textit{Effective Fault Localization Techniques for Concurrent Software}}\label{sec:related-work-7}
+\section{\textit{Formal Synthesis of Analytic Controllers for Sampled-Data Systems via Genetic Programming.}}\label{sec:related-work-7}
 
 Park {\it et al.}~\cite{Park:2014} apresentam um método de localização de falhas dinâmico para localizar as raízes da causa de defeitos de concorrência e a implementação de um protótipo da técnica, chamado \textsc{Falcon}. Usando detecção dinâmica de padrões e localização de falhas estatística, o \textsc{Falcon} é capaz de mostrar a existência de defeitos em programas concorrentes, tanto de atomicidade quanto violação de ordem, auxiliando desenvolvedores a corrigir falhas em códigos. A técnica utiliza dados providos por casos de teste para o programa em verificação e tenta encontrar padrões pré-estabelecidos de acesso à memória compartilhada. Tais padrões são organizados estatisticamente de forma a priorizar quais as possíveis falhas existentes no programa.
 
