--- a/references/references.bib
+++ b/references/references.bib
@@ -1244,3 +1244,11 @@ title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
   year={2017},
   publisher={IEEE}
 }
+@inproceedings{abate2017automated,
+  title={Automated formal synthesis of digital controllers for state-space physical plants},
+  author={Abate, Alessandro and Bessa, Iury and Cattaruzza, Dario and Cordeiro, Lucas and David, Cristina and Kesseli, Pascal and Kroening, Daniel and Polgreen, Elizabeth},
+  booktitle={International Conference on Computer Aided Verification},
+  pages={462--482},
+  year={2017},
+  organization={Springer}
+}
